bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: not found: value Mathabs
  if(( Mathabs(100-n)<=10) || ( Mathabs(200-n)<=10))
       ^NearHundred:2: error: not found: value Mathabs
  if(( Mathabs(100-n)<=10) || ( Mathabs(200-n)<=10))
                                ^