bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if(( Mathabs(100-n)<=10) || ( Mathabs(200-n)<=10))
  	{
      return true
    }
  else{
    return false
  }
}